Updated ChartModeSelector interface + fixing getOvertakesPerRace backend